# a1-users-app

./: README.md  docker-compose.yml  fetch_users.bash  initialize.bash  pyproject.toml  run_api.bash
app/: .env  alembic.ini  base.py  docker-compose.yml  dockerfile  main.py
app/alembic/: env.py
app/alembic/versions/: 20230314_1239_c191250d6945_add_user_and_userlocation.py  20230316_1431_75c142964e8d_add_user_and_userlocation.py
app/models/: __init__.py  base.py  mixins.py  user.py
app/pydantic_models/: user.py  user_external.py
app/scripts/: fetch_users.py
